# ApexSingularityNexusASN

./: requirements.txt  start_asn.sh  test_bridge.py
documents/: Blueprint.txt  Blueprintverification.txt  Project_Handover_LieD.md  Todo.txt  fixupdatev1.txt  lastupdatev1.txt  newupdatev1.txt  newupdatev2.txt  newupdatev3.txt  things to do v1.txt  updatefitnessv1.txt  updategpv1.txt  updateielv1.txt  updateielv2.txt  updateielv3.txt  updatel2v1.txt  updatemainv1.txt  updatemamlv1.txt  updatevalidationv1.txt  updatevalidationv2.txt
forge/: advanced_validator.py  benchmark_bridge.py  causal_engine.py  chimera_engine.py  fitness_ttt.py  gp_framework.py  iel_environment.py  iel_trainer.py  job_consumer.py  maml_adapter.py  sae_manager.py  sae_oracle.py  serialize_strategy.py  strategy.json  validation_gauntlet.py
nexus/: Cargo.toml  iel_model.onnx
nexus/src/: lib.rs  ui_server.rs
nexus/src/backtester/: mod.rs  signal_backtester.rs  vectorized_backtester.rs
nexus/src/hf_abm/: simulator.rs
nexus/src/inference/: gp_interpreter.rs  mod.rs
nexus/src/velocity_core/: execution.rs  iel.rs  l2_handler.rs  mod.rs  models.rs  private_stream.rs
