[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexus"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nexus_tester"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures-util = "0.3.30"
url = "2.5.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"

rust_decimal = "1.29.0"
rust_decimal_macros = "1.29.0"

reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

pyo3 = { version = "0.21.2", features = ["extension-module"] }

anyhow = "1.0"
thiserror = "1.0"

notify = "6.1.1"
parking_lot = "0.12"

polars = { version = "0.41.0", features = ["lazy", "ndarray", "serde", "temporal", "dtype-decimal", "performant", "rolling_window"] }
pyo3-polars = { version = "0.13.0", features = ["derive"] }

chrono = "0.4.38"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }

tract-onnx = "0.21.0" 

onnxruntime = "0.0.14"
ndarray = "0.15.1"
lazy_static = "1.4.0"
rand = "0.8"
rand_distr = "0.4"